--- a/Read Opus into R.Rmd
+++ b/Read Opus into R.Rmd
@@ -13,6 +13,36 @@ Database connection. TBD
 https://inbo.github.io/tutorials/tutorials/r_large_data_files_handling/
 ```{r}
 dbconnection <- odbcDriverConnect("Driver={SQL Server};Server={AKC0SS-VI-071.nmfs.local,1919};Database=AGE3;Trusted_Connection=yes;")
+
+# Morgan adding code for DB connection and querying - this is what I used for querying RACEBASE so will need to be updated
+library(DBI)
+library(odbc)
+library(tidyverse)
+
+#test environment
+# R.home(component = "home")
+# Sys.getenv("PATH")
+# Sys.getenv("OCI_INC")
+
+sql_run <- function(database, query) {
+  query = paste(query, collapse = "\n")
+  DBI::dbGetQuery(database, query, as.is=TRUE, believeNRows=FALSE)
+}
+
+#Create connection to database
+afsc <- DBI::dbConnect(odbc::odbc(), "afsc", 
+                       UID = "MARRINGTON", PWD = "NMF$afsc2017")
+
+#Run query
+#,30060,21740) # Enter species code; # 21740 (Pollock), 30060 (POP), 30152/30150 (Dusky); 21720 (Pacific Cod)
+specimen_dat_201902 <- sql_run(afsc,
+        "SELECT * FROM RACEBASE.SPECIMEN 
+        WHERE CRUISE = 201902 
+        AND SPECIES_CODE = 21720
+        AND VESSEL = 162")
+
+write.csv(specimen_dat_201902, file ="C:/Users/morgan.arrington/Work/RACEBASE database access/Queries/pcod_201902.csv")
+
 ```
 
 
