--- a/Read Opus into R.Rmd
+++ b/Read Opus into R.Rmd
@@ -364,6 +364,11 @@ ggplot()+
 
 #Looks good!
 
+#Export spectral data to .csv file(s)
+write.csv(dfmeta, file = "~/SpectralData.csv") #rename following meaninful naming convention
+write.csv(dfmeta_long, file = "~/SpectralData_long.csv") #rename following meaningful naming convention
+
+
 #Remove the superfluous objects to clean up the workspace
 rm(list=ls()[! ls() %in% c("dfmeta_long","meta")])
 
