--- a/Read Opus into R.Rmd
+++ b/Read Opus into R.Rmd
@@ -118,7 +118,7 @@ meta<-filter(meta,grepl("_O",file_name)) #this should remove all files that aren
 meta<-meta[meta$region %in% c("BS"),] #BS only
 
 meta$session_title1<-meta$session_title
-meta<-splitstackshape::cSplit(meta,sep="_",splitCols="session_title1")
+meta<-splitstackshape::cSplit(meta,sep="_",splitCols="session_title1",type.convert=FALSE)
 
 meta<-meta[is.na(meta$session_title1_3),] #I just filtered everything that was rescanned or fresh, or 45 deg etc. for now
 meta<-dplyr::select(meta,-c("session_title1_1","session_title1_1","session_title1_2"    ,"session_title1_3","session_title1_4"))
@@ -224,9 +224,9 @@ for (i in 1:length(spectra)){
 #I need to get the file names from the long list
 try<-spectra[[1]]
 
-splitstackshape::cSplit(as.data.frame(try$file_path),sep="/",splitCols="try$file_path")%>%select(tail(names(.), 1))
+splitstackshape::cSplit(as.data.frame(try$file_path),sep="/",splitCols="try$file_path",type.convert=FALSE)%>%select(tail(names(.), 1))
 
-file_name<-lapply(spectra, function (x) splitstackshape::cSplit(as.data.frame(x$file_path),sep="/",splitCols="x$file_path")%>%select(tail(names(.), 1)))
+file_name<-lapply(spectra, function (x) splitstackshape::cSplit(as.data.frame(x$file_path),sep="/",splitCols="x$file_path",type.convert=FALSE)%>%select(tail(names(.), 1)))
 
 
 file_name[[1]][[1,1]]
